Another fix for svg cutoff on Android

--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ div.linkout div.twitter img {
     padding-top: 6px;
 }
 
-img.blog-svg {
+.blog-svg {
 	max-height: 58px;
 }
 
